crates/next-custom-transforms/tests/errors/server-actions/client-graph/2/output.js
/* __next_internal_client_entry_do_not_use__ default auto */ export default function App() {
    async function fn() {
        'use cache';
    }
    return <div>App</div>;
}
